--- a/src/site/markdown/install-script.md.vm
+++ b/src/site/markdown/install-script.md.vm
@@ -49,9 +49,9 @@ Starten Sie das Skript mit:
 ./<IHR VERZEICHNIS>/aktin-dwh-installer/aktin_install.sh
 ```
 
-Das Installationsskript wird nun automatisch ausgeführt. Im Anschluss wird außerdem auch die aktuelleste Version von `dwh-update` eingespielt. Es ist anzumerken, dass für die Installation Zugriff auf das Internet benötigt wird, damit entsprechende Pakete und Komponente heruntergeladen werden können.
+Das Installationsskript wird nun automatisch ausgeführt. Im Anschluss wird außerdem auch die aktuelleste Version von `dwh-update` eingespielt. Es ist anzumerken, dass für die Installation Zugriff auf das Internet benötigt wird, damit entsprechende Pakete und Komponente heruntergeladen werden können. Sämtliche Logausgaben finden Sie nach der Installation im jeweiligen Installationsordner. Weiterhin werden nach Abschluss der Installation die Komponenten 'apache2', 'postgresql' und 'wildfly' automatisch gestartet. 
 
-Sämtliche Logausgaben finden Sie nach der Installation im jeweiligen Installationsordner. Folgende Pakete werden dabei installiert und konfiguriert:
+Folgende Pakete werden dabei installiert und konfiguriert:
 
 <table>
 <thead>
@@ -121,7 +121,7 @@ Nach Abschluss der Installation und vor Start der Anwendung ist es unbedingt not
 <br></br>
 
 
-**aktin.properties**
+<h5>aktin.properties</h5>
 
 In dieser Datei werden Angaben zum lokalen DWH und Standort-spezifische Änderungen gemacht. Für das Anpassen der Datei `aktin.properties` muss folgender Befehl ausgeführt werden:
 
@@ -244,10 +244,10 @@ Haben Sie die `aktin.properties` nach Ihren Wünschen angepasst, kopieren Sie si
 cp /<IHR VERZEICHNIS>/aktin-dwh-installer/dwh-update/aktin.properties /opt/wildfly/standalone/configuration/
 ```
 
-Nachdem Sie die Datei `aktin.properties` in das Konfigurationsverzeichnis kopiert haben, muss der Wildfly-Server neugestartet bzw. zum ersten Mal gestartet werden. Dieser Schritt kann aber noch auf sich warten lassen, da noch Änderungen an der Datei `email.config` vorzunehmen sind. Für nachträgliche Änderungen an `aktin.properties` beachten Sie die Hinweise im Abschnitt [Weitere Anmerkungen](install-script.html#Weitere_Anmerkungen).
+Für nachträgliche Änderungen an `aktin.properties` beachten Sie die Hinweise im Abschnitt [Weitere Anmerkungen](install-script.html#Weitere_Anmerkungen).
 <br></br>
 
-**email.config**
+<h5>email.config</h5>
 
 In dieser Datei wird die E-Mail-Konfiguration für die Ausgangsmailadresse vorgenommen, welche für hausinterne Benachrichtigungen und Berichte verwendet werden soll (z.B. für den Versand von monatlich erzeugten Berichtsdokumente an die in `aktin.properties` angegebenen E-Mail-Adresse). Die in `email.config` angegebene Adresse sollte eine dedizierte E-Mail-Adresse (Dienstkonto mit festem Passwort) sein. Eine funktionstüchtige E-Mail-Adresse ist Voraussetzung für die Installation. Für das Anpassen der Datei `email.config` muss folgender Befehl ausgeführt werden:
 
@@ -285,7 +285,7 @@ USETLS=true
 
 ```
 
-Anders als bei der Datei `aktin.properties` muss `email.config` in die Konfiguration eines laufenden Wildfly-Servers injiziert werden. Die geschieht über das Skript `email_create.sh`, welches einen Wildfly-Server startet, die Injizierung vornimmt und anschließend wieder herunterfährt. Wechseln Sie in das Update-Verzeichnis und führen Sie das Skript `email_create.sh` über folgende Befehle aus:
+Anders als bei der Datei `aktin.properties` muss `email.config` in die Konfiguration eines laufenden Wildfly-Servers injiziert werden. Die geschieht über das Skript `email_create.sh`. Wechseln Sie in das Update-Verzeichnis und führen Sie das Skript `email_create.sh` über folgende Befehle aus:
 
 ```
 cd /<IHR VERZEICHNIS>/aktin-dwh-installer/dwh-update/
@@ -294,22 +294,9 @@ cd /<IHR VERZEICHNIS>/aktin-dwh-installer/dwh-update/
 ```
 
 Für nachträgliche Änderungen an `email.config` beachten Sie die Hinweise im Abschnitt [Weitere Anmerkungen](install-script.html#Weitere_Anmerkungen).
+
+Haben Sie die Installation erfolgreich abgeschlossen und die beiden Dateien `aktin.properties` und `email.config` entsprechend konfiguriert und eingespielt, ist das AKTIN Data Warehouse nun einsatzbereit.
 <br></br>
-
-
-
-<h4>Start der Komponente</h4>
-Haben Sie die Installation erfolgreich abgeschlossen und die beiden Dateien `aktin.properties` und `email.config` entsprechend konfiguriert und eingespielt, können Sie die Komponente des AKTIN-Data Warehouse starten. Folgende Befehle müssen dazu ausgeführt werden:
-
-```
-service apache2 start
-
-service postgresql start
-
-service wildfly start
-```
-<br></br>
-
 
 
 <h4>Einstellungen in der i2b2-Adminoberfläche</h4>
@@ -327,11 +314,11 @@ Das genaue Vorgehen hierfür können Sie in den letzten beiden Abschnitten **Ben
 <h4>Test der Betriebsfähigkeit</h4>
 Nach der Installation der AKTIN-Software ist es anzuraten, dessen Betriebsfähigkeit zu testen. Im folgenden Bereich können Sie Methoden und Funktionalitäten für die Verifikation der Betriebsfähigkeit entnehmen.
 
-**Data Warehouse**
+<h5>Data Warehouse</h5>
 
 Wenn die Installation erfolgreich durchgeführt wurde, kann anschließend per Webbrowser auf das integrierte Data Warehouse zugegriffen werden. In der Adresszeile muss die entsprechende IP-Adresse/Servername angepasst werden: `http://<IHR SERVER>/webclient/`
 
-**CDA Importschnittstelle**
+<h5>CDA Importschnittstelle</h5>
 
 Die Importschnittstelle des Servers kann mit den Client-Programmen aus dem Software-Paket (ZIP) des [Demo-Server](https://www.aktin.org/software/0.11/dwh-import/demo-server.html) getestet werden:
 
@@ -339,7 +326,7 @@ Die Importschnittstelle des Servers kann mit den Client-Programmen aus dem Softw
 java-client-fhir.bat http://<IHR SERVER>/aktin/cda/fhir/Binary examples\basismodul-beispiel-storyboard01.xml
 ```
 
-**Verbindung und E-Mail-Konfiguration**
+<h5>Verbindung und E-Mail-Konfiguration</h5>
 
 Unter dem Link `http://<IHR SERVER>/aktin/admin/plain/test.html` lassen sich die durchgeführten Anpassungen bezüglich Broker und E-Mail sowie Reporterstellung testen.
 
@@ -373,17 +360,13 @@ Nachdem das Skript erfolgreich durchgelaufen ist, befindet sich im Verzeichnis `
 
 * Im Internet Explorer kommt es in der i2b2-Oberfläche zu Darstellungsfehlern. So werden z.B. keine User unter _Manage Users_ angezeigt und unter _Manage Projects_ sind die Projekte nicht einsehbar (sattdessen erscheint ein permanentes Ladezeichen). Dieser Fehler ist bereits bekannt, kann aber von unserer Seite aus nicht behoben werden, da i2b2 eine externe Software von der wir lediglich die Schnittstelle nutzen. Wir würden Sie daher bitten für die Nutzerverwaltung einen anderen Browser zu verwenden (z.B. Firefox oder Chrome).
 
-* Für nachträgliche Änderungen in der Datei `aktin.properties` müssen Sie zunächst den laufenden Wildfly-Server stoppen. Bearbeiten Sie anschließend über den Befehl `nano` die im Wildfly-Konfigurationsordner hinterlegte `aktin.properties`. Nach Abschluss der Bearbeitung, speichern Sie die Änderungen in der Konfigurationsdatei und starten Sie den Wildfly-Server neu:
+* Für nachträgliche Änderungen in der Datei `aktin.properties` bearbeiten Sie über den Befehl `nano` die im Wildfly-Konfigurationsordner hinterlegte Datei. Nach Abschluss der Bearbeitung, speichern Sie die Änderungen einfach ab.
 
 ```
-service wildfly stop
-
 nano /opt/wildfly/standalone/configuration/aktin.properties
-
-service wildfly start
 ```
 
-* Für nachträgliche Änderungen in der Datei `email.config` müssen die Änderungen während eines laufenden Wildfly-Servers geschehen, da sämtliche Konfigurationen in der Datei `standalone.xml` des Servers hinterlegt sind. Bearbeiten Sie zunächst über den Befehl `nano` die im Update-Verzeichnis hinterlegte Konfigurationsdatei. Führen Sie danach das Skript `email_reset.sh` aus, um die derzeitigen Konfigurationseinstellungen aus `standalone.xml` zu löschen. Laden Sie im Anschluss Ihre aktualisierte Konfiguration über das Skript `email_create.sh` in `standalone.xml` ein. Nehmen Sie den Betrieb wieder auf, indem Sie den Wildfly-Server starten:
+* Für nachträgliche Änderungen in der Datei `email.config` müssen die Änderungen während eines laufenden Wildfly-Servers geschehen, da sämtliche Konfigurationen in der Datei `standalone.xml` des Servers hinterlegt sind. Bearbeiten Sie zunächst über den Befehl `nano` die im Update-Verzeichnis hinterlegte Konfigurationsdatei. Führen Sie danach das Skript `email_reset.sh` aus, um die derzeitigen Konfigurationseinstellungen aus `standalone.xml` zu löschen. Laden Sie im Anschluss Ihre aktualisierte Konfiguration über das Skript `email_create.sh` in `standalone.xml` ein:
 
 ```
 cd /<IHR VERZEICHNIS>/aktin-dwh-installer/dwh-update/
@@ -393,6 +376,4 @@ nano email.config
 ./email_reset.sh
 
 ./email_create.sh
-
-service wildfly start
 ```
